include/constantine/curves/bn254_snarks.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fp;
typedef struct { bn254_snarks_fp c[2]; } bn254_snarks_fp2;
typedef struct { bn254_snarks_fp x, y; } bn254_snarks_g1_aff;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_jac;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_prj;
typedef struct { bn254_snarks_fp2 x, y; } bn254_snarks_g2_aff;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_jac;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_prj;
void        ctt_big254_from_bn254_snarks_fr(big254* dst, const bn254_snarks_fr* src);
void        ctt_bn254_snarks_fr_from_big254(bn254_snarks_fr* dst, const big254* src);
ctt_bool    ctt_bn254_snarks_fr_unmarshalBE(bn254_snarks_fr* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bn254_snarks_fr_marshalBE(byte dst[], size_t dst_len, const bn254_snarks_fr* src) __attribute__((warn_unused_result));
secret_bool ctt_bn254_snarks_fr_is_eq(const bn254_snarks_fr* a, const bn254_snarks_fr* b);
secret_bool ctt_bn254_snarks_fr_is_zero(const bn254_snarks_fr* a);
secret_bool ctt_bn254_snarks_fr_is_one(const bn254_snarks_fr* a);
secret_bool ctt_bn254_snarks_fr_is_minus_one(const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_zero(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_one(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_minus_one(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_neg(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_neg_in_place(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_sum(bn254_snarks_fr* r, const bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_add_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_diff(bn254_snarks_fr* r, const bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_sub_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_double(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_double_in_place(bn254_snarks_fr* a);