constantine-rust/constantine-sys/src/bindings32.rs

#[test]
fn bindgen_test_layout_bn254_snarks_fp() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_fp> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_fp>(),
        32usize,
        concat!("Size of: ", stringify!(bn254_snarks_fp))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_fp>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_fp))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_fp),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_fp2 {
    c: [bn254_snarks_fp; 2usize],
}
#[test]
fn bindgen_test_layout_bn254_snarks_fp2() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_fp2> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_fp2>(),
        64usize,
        concat!("Size of: ", stringify!(bn254_snarks_fp2))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_fp2>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_fp2))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).c) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_fp2),
            "::",
            stringify!(c)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g1_aff {
    x: bn254_snarks_fp,
    y: bn254_snarks_fp,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g1_aff() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g1_aff> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g1_aff>(),
        64usize,
        concat!("Size of: ", stringify!(bn254_snarks_g1_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g1_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g1_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g1_jac {
    x: bn254_snarks_fp,
    y: bn254_snarks_fp,
    z: bn254_snarks_fp,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g1_jac() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g1_jac> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g1_jac>(),
        96usize,
        concat!("Size of: ", stringify!(bn254_snarks_g1_jac))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g1_jac>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g1_jac))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_jac),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_jac),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_jac),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g1_prj {
    x: bn254_snarks_fp,
    y: bn254_snarks_fp,
    z: bn254_snarks_fp,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g1_prj() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g1_prj> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g1_prj>(),
        96usize,
        concat!("Size of: ", stringify!(bn254_snarks_g1_prj))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g1_prj>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g1_prj))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_prj),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_prj),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g1_prj),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g2_aff {
    x: bn254_snarks_fp2,
    y: bn254_snarks_fp2,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g2_aff() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g2_aff> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g2_aff>(),
        128usize,
        concat!("Size of: ", stringify!(bn254_snarks_g2_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g2_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g2_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g2_jac {
    x: bn254_snarks_fp2,
    y: bn254_snarks_fp2,
    z: bn254_snarks_fp2,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g2_jac() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g2_jac> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g2_jac>(),
        192usize,
        concat!("Size of: ", stringify!(bn254_snarks_g2_jac))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g2_jac>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g2_jac))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_jac),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_jac),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_jac),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bn254_snarks_g2_prj {
    x: bn254_snarks_fp2,
    y: bn254_snarks_fp2,
    z: bn254_snarks_fp2,
}
#[test]
fn bindgen_test_layout_bn254_snarks_g2_prj() {
    const UNINIT: ::core::mem::MaybeUninit<bn254_snarks_g2_prj> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bn254_snarks_g2_prj>(),
        192usize,
        concat!("Size of: ", stringify!(bn254_snarks_g2_prj))
    );
    assert_eq!(
        ::core::mem::align_of::<bn254_snarks_g2_prj>(),
        4usize,
        concat!("Alignment of ", stringify!(bn254_snarks_g2_prj))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_prj),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_prj),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(bn254_snarks_g2_prj),
            "::",
            stringify!(z)
        )
    );
}
extern "C" {
    pub fn ctt_big254_from_bn254_snarks_fr(dst: *mut big254, src: *const bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_from_big254(dst: *mut bn254_snarks_fr, src: *const big254);
}
extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fr_unmarshalBE(
        dst: *mut bn254_snarks_fr,
        src: *const byte,
        src_len: usize,
    ) -> bool;
}
extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fr_marshalBE(
        dst: *mut byte,
        dst_len: usize,
        src: *const bn254_snarks_fr,
    ) -> bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_is_eq(
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_is_zero(a: *const bn254_snarks_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_is_one(a: *const bn254_snarks_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_is_minus_one(a: *const bn254_snarks_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_set_zero(a: *mut bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_set_one(a: *mut bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_set_minus_one(a: *mut bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_neg(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_neg_in_place(a: *mut bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_sum(
        r: *mut bn254_snarks_fr,
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_add_in_place(a: *mut bn254_snarks_fr, b: *const bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_diff(
        r: *mut bn254_snarks_fr,
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    );
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_sub_in_place(a: *mut bn254_snarks_fr, b: *const bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_double(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
extern "C" {
    pub fn ctt_bn254_snarks_fr_double_in_place(a: *mut bn254_snarks_fr);
}
